fix buttons style, on mobile get "stuck"

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -58,3 +58,7 @@ a:hover {
 a {
     color: #97A3AB;
 }
+
+.btn:hover {
+    background-color: inherit;
+}
